--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>eu.unicredit.bigdata</groupId>
+	<groupId>eu.unicredit.dna</groupId>
 	<artifactId>reactive-rule-engine</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
@@ -19,14 +19,10 @@
 		<project.organization.name>UniCredit Business Integrated Solutions S.c.p.A</project.organization.name>
 		<project.inceptionYear>2015</project.inceptionYear>
 		<version.compiler.plugin>3.2</version.compiler.plugin>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>18.0</version>
-		</dependency>
 
 		<dependency>
 			<groupId>org.scala-lang</groupId>
@@ -70,6 +66,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+			</plugin>
+
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -82,6 +83,21 @@
 						<target>${maven.compiler.target}</target>
 					</configuration>
 				</plugin>
+
+				<plugin>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>2.6</version>
+					<executions>
+						<execution>
+							<id>dist</id>
+							<phase>package</phase>
+							<goals>
+								<goal>single</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
 				<plugin>
 					<groupId>com.mycila.maven-license-plugin</groupId>
 					<artifactId>maven-license-plugin</artifactId>
@@ -117,20 +133,4 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-
-	<distributionManagement>
-		<repository>
-			<id>ubis-repository</id>
-			<url>
-				http://usqrtpl5321.internal.unicreditgroup.eu/nexus/content/repositories/releases
-			</url>
-		</repository>
-		<snapshotRepository>
-			<id>ubis-repository</id>
-			<name>Internal Snapshots</name>
-			<url>
-				http://usqrtpl5321.internal.unicreditgroup.eu/nexus/content/repositories/snapshots
-			</url>
-		</snapshotRepository>
-	</distributionManagement>
 </project>
