--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-			</plugin>
-
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -83,26 +78,12 @@
 						<target>${maven.compiler.target}</target>
 					</configuration>
 				</plugin>
-
-				<plugin>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.6</version>
-					<executions>
-						<execution>
-							<id>dist</id>
-							<phase>package</phase>
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-
 				<plugin>
 					<groupId>com.mycila.maven-license-plugin</groupId>
 					<artifactId>maven-license-plugin</artifactId>
 					<version>1.10.b1</version>
 					<configuration>
+						<strictCheck>true</strictCheck>
 						<header>LicenseHeader.txt</header>
 						<properties>
 							<project>${project.name}</project>
