--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>eu.unicredit.dna</groupId>
 	<artifactId>reactive-rule-engine</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 
 	<name>Reactive rule engine</name>
 
@@ -167,5 +165,6 @@
 	<scm>
 		<url>https://github.com/UniCreditDnA/reactive-rule-engine.git</url>
 		<developerConnection>scm:git://github.com/UniCreditDnA/reactive-rule-engine.git</developerConnection>
-	</scm>
+	  <tag>reactive-rule-engine-1.0</tag>
+  </scm>
 </project>
