--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>eu.unicredit.dna</groupId>
 	<artifactId>reactive-rule-engine</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 
 	<name>Reactive rule engine</name>
 
@@ -165,6 +165,6 @@
 	<scm>
 		<url>https://github.com/UniCreditDnA/reactive-rule-engine.git</url>
 		<developerConnection>scm:git://github.com/UniCreditDnA/reactive-rule-engine.git</developerConnection>
-	  <tag>reactive-rule-engine-1.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 </project>
