--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <drools.version>6.3.0.Final</drools.version>
         <akka.version>2.4.0</akka.version>
         <scala.version>2.11</scala.version>
+        <junit.version>4.12</junit.version>
     </properties>
 
     <distributionManagement>
@@ -228,6 +229,28 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor_${scala.version}</artifactId>
             <version>${akka.version}</version>
+        </dependency>
+
+        <!-- Testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-testkit_${scala.version}</artifactId>
+            <version>${akka.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.3</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
